fix: 🐛 wrap media and button with flex for proper spacing

--- a/src/scss/framework/components/card/_c--card-o.scss
+++ b/src/scss/framework/components/card/_c--card-o.scss
@@ -156,7 +156,7 @@
     @extend .g--btn-03;
     @extend .g--btn-03--second;
     width: 100%;
-    margin-top: $measure * 3;
+    margin-top: auto;
 
     &:hover & {
       &__artwork {
